got the board's display working

--- a/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj
+++ b/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj
@@ -138,7 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="source.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.hpp" />
