reorganized code to be more presentable

--- a/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj
+++ b/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tic_tac_toe.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.hpp" />
