added modes to select from, they're currently dummies

--- a/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj
+++ b/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="tic_tac_toe.cpp" />
   </ItemGroup>
