--- a/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj.filters
+++ b/AI_Tic_Tac_Toe/AI_Tic_Tac_Toe.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="tic_tac_toe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
